syntax = "proto3";

import "types.proto";

package bfx.auth;

service PasswordRecovery {
  rpc RequestPasswordRecovery (RequestPasswordRecoveryRequest) returns (RequestPasswordRecoveryReply);

  rpc CheckPasswordResetToken (CheckPasswordResetTokenRequest) returns (CheckPasswordResetReply);

  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordReply);
}

message RequestPasswordRecoveryRequest {
  string email = 1;
  bfx.UserContext user_context = 2;
}

message RequestPasswordRecoveryReply {
}

message CheckPasswordResetTokenRequest {
  string token = 1;
}

message CheckPasswordResetReply {
  // even if this is null, the token is valid.
  // the user might not have a username and profile.
  // CheckPasswordResetToken returns an error if the token is invalid.
  optional string username = 1;
}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
  bfx.UserContext user_context = 3;
}

message ResetPasswordReply {
}
